package com.baidu.carlife.protobuf;
message CarlifeWirlessIp
{
    required string wirlessip = 1;
}
